dada_tutoral/tutorial.ipynb: Starting to customize

--- a/dada_tutoral/tutorial.ipynb
+++ b/dada_tutoral/tutorial.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This tutorial is based on https://raw.githubusercontent.com/benjjneb/dada2/gh-pages/R/tutorial.Rmd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "# Overview\n",
     "\n",
@@ -20,7 +27,7 @@
    "metadata": {
     "Rmd_chunk_options": "libraries, message=FALSE, warning=FALSE",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -38,16 +45,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Download Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sop_url=\"http://www.mothur.org/w/images/d/d6/MiSeqSOPData.zip\"\n",
+    "# sop_file = basename(sop_url)\n",
+    "download.file(sop_url,basename(sop_url))\n",
+    "unzip(basename(sop_url))\n",
+    "list.files('.')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "Rmd_chunk_options": "path",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "path <- \"~/Desktop/MoMiSOP/MiSeq_SOP/\" # CHANGE ME to the directory containing the fastq files after unzipping.\n",
+    "path <- \"MiSeq_SOP/\"\n",
     "fns <- list.files(path)\n",
     "fns"
    ]
@@ -103,7 +132,7 @@
    "metadata": {
     "Rmd_chunk_options": "see-quality-F",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -127,7 +156,7 @@
    "metadata": {
     "Rmd_chunk_options": "see-quality-R",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -482,7 +511,7 @@
    "metadata": {
     "Rmd_chunk_options": "phyloseq, message=FALSE, warning=FALSE",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -612,7 +641,8 @@
    "file_extension": ".r",
    "mimetype": "text/x-r-source",
    "name": "R",
-   "pygments_lexer": "r"
+   "pygments_lexer": "r",
+   "version": "3.2.2"
   }
  },
  "nbformat": 4,
