--- a/prep_nb/prep_dada_tutorial.ipynb
+++ b/prep_nb/prep_dada_tutorial.ipynb
@@ -63,6 +63,17 @@
    "source": [
     "ls"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rm *.Rmd"
+   ]
   }
  ],
  "metadata": {
