Renamed dada dir and adjusted prep_dada_tutorial.ipynb accordingly

--- a/prep_nb/prep_dada_tutorial.ipynb
+++ b/prep_nb/prep_dada_tutorial.ipynb
@@ -8,8 +8,8 @@
    },
    "outputs": [],
    "source": [
-    "mkdir -p ~/work/dada_tutoral\n",
-    "cd ~/work/dada_tutoral"
+    "mkdir -p ~/work/dada_docs\n",
+    "cd ~/work/dada_docs"
    ]
   },
   {
