Download qiime tutorial

--- a/dada_docs/tutorial.ipynb
+++ b/dada_docs/tutorial.ipynb
@@ -48,14 +48,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Download Data"
+    "## Download Data\n",
+    "### Setup a working directory"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dada_workdir=path.expand(\"~/work/analysis/dada\")\n",
+    "dir.create(dada_workdir, showWarnings = TRUE, recursive = TRUE)\n",
+    "setwd(dada_workdir)\n",
+    "getwd()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Download"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
    "source": [
