--- a/prep_nb/download_qiime_tutorial.ipynb
+++ b/prep_nb/download_qiime_tutorial.ipynb
@@ -8,8 +8,8 @@
    },
    "outputs": [],
    "source": [
-    "mkdir -p ~/work/op_tutorials/qiime_official\n",
-    "cd ~/work/op_tutorials/qiime_official\n",
+    "mkdir -p ~/work/qiime_docs\n",
+    "cd ~/work/qiime_docs\n",
     "pwd"
    ]
   },
