illumina_overview_tutorial.ipynb: Minor changes

--- a/qiime_docs/illumina_overview_tutorial.ipynb
+++ b/qiime_docs/illumina_overview_tutorial.ipynb
@@ -83,6 +83,7 @@
     "from functools import partial\n",
     "from os import chdir\n",
     "\n",
+    "chdir('/home/jovyan/work/op_tutorials/qiime_official')\n",
     "chdir('moving_pictures_tutorial-1.9.0/illumina')\n",
     "FileLink = partial(FileLink, url_prefix='moving_pictures_tutorial-1.9.0/illumina/')\n",
     "FileLinks = partial(FileLinks, url_prefix='moving_pictures_tutorial-1.9.0/illumina/')"
@@ -145,7 +146,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##Demultiplexing and quality filtering sequences\n",
+    "## Demultiplexing and quality filtering sequences\n",
     "\n",
     "We next need to demultiplex and quality filter our sequences (i.e. assigning barcoded reads to the samples they are derived from). In general, you should get separate fastq files for your sequence and barcode reads. Note that we pass these files while still gzipped. ``split_libraries_fastq.py`` can handle gzipped or unzipped fastq files. The default strategy in QIIME for quality filtering of Illumina data is described in [Bokulich et al (2013)](http://www.ncbi.nlm.nih.gov/pmc/articles/PMC3531572/)."
    ]
@@ -223,7 +224,7 @@
    },
    "outputs": [],
    "source": [
-    "!pick_open_reference_otus.py -o otus/ -i slout/seqs.fna -p ../uc_fast_params.txt"
+    "!pick_open_reference_otus.py --parallel -o otus/ -i slout/seqs.fna -p ../uc_fast_params.txt"
    ]
   },
   {
@@ -407,6 +408,48 @@
    "source": [
     "FileLinks(\"precomputed-output/\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "?FileLinks\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ls "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "FileLink(\"illumina_overview_tutorial.ipynb\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -425,7 +468,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.5"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
