Download jupyter tutorial

--- a/workshop_overview.ipynb
+++ b/workshop_overview.ipynb
@@ -4,8 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Jupyter\n",
+    "* [Introduction to Jupyter](workshop_nb/jupyter_tutorial.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Dada\n",
-    "* [Dada Tutorial](dada_docs/tutorial.ipynb)"
+    "* [Introduction to Dada](dada_docs/tutorial.ipynb)"
    ]
   },
   {
