jupyter_tutorial.ipynb: Added some customizations for workshop

--- a/workshop_nb/jupyter_tutorial.ipynb
+++ b/workshop_nb/jupyter_tutorial.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First and foremost, the IPython Notebook is an interactive environment for writing and running code. IPython is capable of running code in a wide range of languages. However, this notebook, and the default kernel in IPython 2.0, runs Python code."
+    "First and foremost, the Jupyter Notebook is an interactive environment for writing and running code. Jupyter is capable of running code in a wide range of languages. However, this notebook, and the default kernel runs Python code."
    ]
   },
   {
@@ -54,10 +54,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are two other keyboard shortcuts for running code:\n",
+    "`Shift-Enter` is one of many useful keyboard shortcuts available in Jupyter.  You can find more shortcuts through the *Help* menu above, under *Keyboard Shortcuts*."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code cell status\n",
+    "The `In [ ]` to the left of the cell tells you that the cell contains code that can be executed. \n",
     "\n",
-    "* `Alt-Enter` runs the current cell and inserts a new one below.\n",
-    "* `Ctrl-Enter` run the current cell and enters command mode."
+    "The square brackets tell you the status of the cell:\n",
+    "* `In [ ]`: the cell has not been run\n",
+    "* `In [*]`: *currently running*\n",
+    "* `In [N]`: the cell has been run, it was the Nth cell run in this notebook\n",
+    "\n",
+    "Watch the `In [ ]` change as you run the following cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "print(\"Start sleeping\")\n",
+    "time.sleep(5) # do nothing for 5 seconds\n",
+    "print(\"Done sleeping\")"
    ]
   },
   {
@@ -83,7 +112,7 @@
    "outputs": [],
    "source": [
     "import time\n",
-    "time.sleep(10)"
+    "time.sleep(60) # do nothing for 60 seconds"
    ]
   },
   {
@@ -115,20 +144,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cell menu"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## Cell menu\n",
+    "### Run Options\n",
+    "\n",
     "The \"Cell\" menu has a number of menu items for running code in different ways. These includes:\n",
     "\n",
     "* Run and Select Below\n",
     "* Run and Insert Below\n",
     "* Run All\n",
     "* Run All Above\n",
-    "* Run All Below"
+    "* Run All Below\n",
+    "\n",
+    "#### Run All\n",
+    "The *Run All* option lets you run the entire analysis in a notebook in one fell swoop\n",
+    "\n",
+    "### Clear Output\n",
+    "The *Cell* menu also has options for cleaning up output\n",
+    "* __Cell -> Current Outputs -> Clear__ : \n",
+    "clear the output from the current cell\n",
+    "* __Cell -> All Outputs -> Clear__ : clear all output in the whole notebook\n",
+    "\n",
+    "Note that Clear also resets the run indicator to `In [ ]`\n"
    ]
   },
   {
@@ -143,43 +179,6 @@
    "metadata": {},
    "source": [
     "The kernel maintains the state of a notebook's computations. You can reset this state by restarting the kernel. This is done by clicking on the <button class='btn btn-default btn-xs'><i class='fa fa-repeat icon-repeat'></i></button> in the toolbar above."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## sys.stdout and sys.stderr"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The stdout and stderr streams are displayed as text in the output area."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "print(\"hi, stdout\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "from __future__ import print_function\n",
-    "print('hi, stderr', file=sys.stderr)"
    ]
   },
   {
@@ -228,7 +227,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
@@ -256,13 +256,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* * *\n",
+    "This derived from https://raw.githubusercontent.com/ipython/ipython/3.x/examples/Notebook/Running%20Code.ipynb"
+   ]
   }
  ],
  "metadata": {
@@ -281,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
