--- a/workshop_overview.ipynb
+++ b/workshop_overview.ipynb
@@ -4,6 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Update Notebooks\n",
+    "* [Update Notebooks](workshop_nb/update_notebooks.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Jupyter\n",
     "* [Introduction to Jupyter](workshop_nb/jupyter_tutorial.ipynb)"
    ]
