--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 * Getting Started
-- [[workshop_nb/do_before.org][Install software and redeem your voucher]]
-- [[workshop_nb/vm_setup.org][VM Setup Instructions]]
-- [[workshop_nb/start_jupyter.org][Start Jupyter]]
-- [[workshop_nb/vm_pause.org][Pause Your VM]]
+  1. [[workshop_nb/do_before.org][Install software and redeem your voucher]]
+  2. [[workshop_nb/vm_setup.org][VM Setup Instructions]]
+  3. [[workshop_nb/start_jupyter.org][Start Jupyter]]
+  4. [[workshop_nb/vm_pause.org][Pause Your VM]]
