dada_docs/tutorial.ipynb: Fixed escaping for dollar signs and percent signs.  Turned on multithreading in dada() call.

--- a/dada_docs/tutorial.ipynb
+++ b/dada_docs/tutorial.ipynb
@@ -206,7 +206,7 @@
    "metadata": {
     "Rmd_chunk_options": "filter, message=FALSE, warning=FALSE",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
    "metadata": {
     "Rmd_chunk_options": "dereplicate, message=FALSE",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -269,11 +269,12 @@
    "metadata": {
     "Rmd_chunk_options": "see-derep",
     "autoscroll": false,
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "derepFs[[1]]"
+    "head(derepFs[[1]]$uniques)\n",
+    "head(derepFs[[1]]$quals)"
    ]
   },
   {
@@ -281,7 +282,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "Dereplicated sequences are stored in the $uniques integer vector, which is named by the unique sequence and valued by the abundance of that sequence. Consensus quality scores are stored in the $quals matrix: rows correspond to unique sequences and columns to nucleotide position. The $map vector maps the reads into the $uniques vector, and is used later when we merge the forward and reverse reads.\n",
+    "Dereplicated sequences are stored in the \\$uniques integer vector, which is named by the unique sequence and valued by the abundance of that sequence. Consensus quality scores are stored in the \\$quals matrix: rows correspond to unique sequences and columns to nucleotide position. The \\$map vector maps the reads into the \\$uniques vector, and is used later when we merge the forward and reverse reads.\n",
     "\n",
     "# Sample Inference\n",
     "\n",
@@ -304,8 +305,8 @@
    },
    "outputs": [],
    "source": [
-    "dadaFs <- dada(derepFs, err=inflateErr(tperr1,3), selfConsist = TRUE)\n",
-    "dadaRs <- dada(derepRs, err=inflateErr(tperr1,3), selfConsist = TRUE)"
+    "dadaFs <- dada(derepFs, err=inflateErr(tperr1,3), selfConsist = TRUE,multithread=TRUE)\n",
+    "dadaRs <- dada(derepRs, err=inflateErr(tperr1,3), selfConsist = TRUE,multithread=TRUE)"
    ]
   },
   {
@@ -388,7 +389,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "We now have a data.frame for each sample with the merged $sequence, its $abundance, and the indices of the merged $forward and $reverse denoised sequences. Paired reads that did not exactly overlap were removed by mergePairs.\n",
+    "We now have a data.frame for each sample with the merged \\$sequence, its \\$abundance, and the indices of the merged \\$forward and \\$reverse denoised sequences. Paired reads that did not exactly overlap were removed by mergePairs.\n",
     "\n",
     "# Constructing the sequence table\n",
     "\n",
@@ -448,8 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "The fraction of chimeras varies based on factors including experimental procedures and sample complexity, but can be substantial. Here chimeras make up about 20\\% of the inferred sequence variants, but those variants account for <4\\% of the total sequence reads.\n",
+    "The fraction of chimeras varies based on factors including experimental procedures and sample complexity, but can be substantial. Here chimeras make up about 20% of the inferred sequence variants, but those variants account for <4% of the total sequence reads.\n",
     "\n",
     "This is the final product of the core DADA2 pipeline: a sequence table that contains the counts of each denoised sequence variant in each sample.\n",
     "\n",
@@ -457,9 +457,9 @@
     "\n",
     "It is common at this point, especially in 16S or 18S amplicon sequencing, to classify denoised sequence variants taxonomically. The DADA2 package provides a native implementation of [the RDP's naive Bayesian classifier](http://www.ncbi.nlm.nih.gov/pubmed/17586664) for this purpose. The assignTaxonomy(...) function takes a set of sequences and a training set of taxonomically classified sequences, and outputs the taxonomic assignments with at least minBoot bootstrap confidence.\n",
     "\n",
-    "Appropriately formatted training fastas for the RDP training set 14, the GreenGenes 13.8 release clustered at 97\\% identity, and the Silva reference database are [available for download here](https://www.dropbox.com/sh/mfcivbudmc21cqt/AAB1l-AUM5uKvjrR33ct-cTXa?dl=0). Download the rdp\\_train\\_set\\_14.fa.gz file, and place it in the directory with the fastq files.\n",
+    "Appropriately formatted training fastas for the RDP training set 14, the GreenGenes 13.8 release clustered at 97% identity, and the Silva reference database are [available for download here](https://www.dropbox.com/sh/mfcivbudmc21cqt/AAB1l-AUM5uKvjrR33ct-cTXa?dl=0). Download the rdp\\_train\\_set\\_14.fa.gz file, and place it in the directory with the fastq files.\n",
     "\n",
-    "**Assign taxonomy:**\n"
+    "**Assign taxonomy:**"
    ]
   },
   {
@@ -514,9 +514,9 @@
    "metadata": {},
    "source": [
     "\n",
-    "This mock community dataset contained **20** bacterial strains. DADA2 found **20** unique sequences all of which **exactly** match the reference genomes of the expected community members. The residual error rate after the DADA2 pipeline is **0\\%**.\n",
+    "This mock community dataset contained **20** bacterial strains. DADA2 found **20** unique sequences all of which **exactly** match the reference genomes of the expected community members. The residual error rate after the DADA2 pipeline is **0%**.\n",
     "\n",
-    "In comparison, when the Mothur pipeline is run on this same dataset, [it finds 35 OTUs in this Mock community sample](http://www.mothur.org/wiki/MiSeq_SOP#Assessing_error_rates). Not only is DADA2 inferring exact sequences instead of fuzzy 97\\% OTUs, it is making fewer false positive inferences than the OTU construction methods!\n",
+    "In comparison, when the Mothur pipeline is run on this same dataset, [it finds 35 OTUs in this Mock community sample](http://www.mothur.org/wiki/MiSeq_SOP#Assessing_error_rates). Not only is DADA2 inferring exact sequences instead of fuzzy 97% OTUs, it is making fewer false positive inferences than the OTU construction methods!\n",
     "\n",
     "**Here ends the DADA2 portion of the tutorial**.\n",
     "\n",
