Add some text to dada_docs/download_taxonomy.ipynb

--- a/dada_docs/download_taxonomy.ipynb
+++ b/dada_docs/download_taxonomy.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Download RDP taxonomy reference from https://www.dropbox.com/sh/mfcivbudmc21cqt/AAB1l-AUM5uKvjrR33ct-cTXa?dl=0 for use by assignTaxonomy()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
