--- a/workshop_overview.ipynb
+++ b/workshop_overview.ipynb
@@ -4,24 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Update Notebooks\n",
-    "* [Update Notebooks](workshop_nb/update_notebooks.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Jupyter\n",
-    "* [Introduction to Jupyter](workshop_nb/jupyter_tutorial.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Dada\n",
-    "* [Introduction to Dada](dada_docs/tutorial.ipynb)"
+    "1. [Introduction to Jupyter](workshop_nb/jupyter_tutorial.ipynb)\n",
+    "1. [Introduction to R](swc_r_docs/01-starting-with-data.ipynb)\n",
+    "1. [Introduction to Dada](dada_docs/tutorial.ipynb)"
    ]
   },
   {
@@ -29,7 +14,8 @@
    "metadata": {},
    "source": [
     "## Miscellaneous\n",
-    "* [Download from VM](workshop_nb/download_through_jupyter.ipynb)"
+    "* [Download from VM](workshop_nb/download_through_jupyter.ipynb)\n",
+    "* [Update Notebooks](workshop_nb/update_notebooks.ipynb)"
    ]
   }
  ],
