renamed tutorial docs for easier identification

--- a/workshop_overview.ipynb
+++ b/workshop_overview.ipynb
@@ -4,9 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Workshop Sections\n",
     "1. [Introduction to Jupyter](workshop_nb/jupyter_tutorial.ipynb)\n",
-    "1. [Introduction to R](swc_r_docs/01-starting-with-data.ipynb)\n",
-    "1. [Introduction to Dada](dada_docs/tutorial.ipynb)"
+    "1. [Introduction to R](swc_r_docs/r_tutorial.ipynb)\n",
+    "1. [Introduction to Dada](dada_docs/dada_tutorial.ipynb)"
    ]
   },
   {
